--- a/_posts/2026-01-15-moe.md
+++ b/_posts/2026-01-15-moe.md
@@ -3,7 +3,7 @@ layout: distill
 title: "REAM: Compressing Mixture-of-Experts LLMs"
 description: Merging experts in Mixture-of-Experts (MoE) LLMs to compress a 235B LLM.
 tags: llm merging mixture-of-experts moe compression empirical-study research
-giscus_comments: true
+giscus_comments: false
 date: 2026-01-15
 featured: false
 mermaid:
