--- a/_posts/2026-01-15-moe.md
+++ b/_posts/2026-01-15-moe.md
@@ -41,10 +41,9 @@ toc:
       - name: Expert Network Architecture
       - name: Key Concepts of MoE
       - name: Strengths of MoE
-  - name: "Background: Compressing MoE"
+  - name: Background
     subsections:
         - name: Pruning Experts
-        - name: Merging Experts
         - name: Merging Experts
   - name: REAM
     subsections:
@@ -250,7 +249,7 @@ These findings explain increasing the number of experts to 384 in Kimi K2 compar
 Even though the total number of parameter is soared to 1T, the inference remains efficient (with only TopK=8 experts activated).
 **However, the memory demand to store all expert weights on GPUs becomes a bottleneck for deploying such large MoE LLMs.**
 
-## Background: Compressing MoE
+## Background
 
 Let me briefly describe some key expert pruning and merging techniques below before presenting my approach and results.
 I follow an assumption standard in the MoE compression literature that there is a pretrained MoE model with $N$ experts per MoE layer and the goal is to reduce it to $k < N$ experts.
