fix mobile view

--- a/_posts/2026-01-15-moe.md
+++ b/_posts/2026-01-15-moe.md
@@ -128,7 +128,7 @@ MoEs were later proved useful in deep learning, including for language models in
 then scaled to 1T parameter models in 2022 by William Fedus et al.<d-cite key="fedus2022switch"></d-cite>.
 
 
-<div class="row mt-3 l-body" style="text-align: center; width: 70%; margin-left: 100px;"> 
+<div class="row mt-3 l-body figure-container-desktop">
    <div class="col-sm mt-3 mt-md-0" style="text-align: center;">
         {% include figure.liquid path="assets/img/2026-01-15-moe/moe_2022.png" class="img-fluid d-block mx-auto rounded z-depth-1" zoomable=true %}
     </div> 
@@ -157,7 +157,7 @@ Softmax is applied along each row to produce a probability distribution over the
 
 ### Expert Network Architecture
 
-<div class="row mt-3 l-body" style="text-align: center; margin-left: 150px; width: 50%;"> 
+<div class="row mt-3 l-body figure-container-desktop-small">
    <div class="col-sm mt-3 mt-md-0" style="text-align: center;">
         {% include figure.liquid path="assets/img/2026-01-15-moe/glu.png" class="img-fluid d-block mx-auto rounded z-depth-1" zoomable=true %}
     </div> 
@@ -234,7 +234,7 @@ leading to even better scaling trends in recent MoE LLMs.
 Moreover, recently Kimi MoE LLMs<d-cite key="team2025kimi"></d-cite> demonstrated **strong scaling trends with increasing MoE sparsity** (see the Figure below).
 They define sparsity as the total number of experts ($N$) divided by TopK showing that for a fixed TopK increasing $N$ and, hence, sparsity consistently improves results.
 
-<div class="row mt-3 l-body" style="text-align: center; margin-left: 100px; width: 70%; ">
+<div class="row mt-3 l-body figure-container-desktop">
     <div class="col-sm mt-3 mt-md-0" style="text-align: center;">
         {% include figure.liquid path="assets/img/2026-01-15-moe/kimi_k2_sparsity_scaling.png" class="img-fluid d-block mx-auto rounded z-depth-1" zoomable=true %}
     </div> 
@@ -255,7 +255,7 @@ Let me briefly describe some key expert pruning and merging techniques below bef
 I follow an assumption standard in the MoE compression literature that there is a pretrained MoE model with $N$ experts per MoE layer and the goal is to reduce it to $k < N$ experts.
 I do not consider retraining/fine-tuning (or any further compression) after pruning/merging experts, which could be a complementary step.
 
-<div class="row mt-3 l-body" style="text-align: center; margin-left: 100px; width: 70%;"> 
+<div class="row mt-3 l-body figure-container-desktop"> 
    <div class="col-sm mt-3 mt-md-0" style="text-align: center;">
         {% include figure.liquid path="assets/img/2026-01-15-moe/pruning_vs_merging.png" class="img-fluid d-block mx-auto rounded z-depth-1" zoomable=true %}
     </div> 
@@ -358,7 +358,7 @@ primarily **neuron permutation symmetry**.
 
 For example, in a 2 layer MLP, we can randomly permute rows of the first layer weights and permute in the same order the corresponding columns of the second layer weights without changing the function computed by the MLP.
 
-<div class="row mt-3 l-body" style="text-align: center; margin-left: 150px; width: 50%;"> 
+<div class="row mt-3 l-body figure-container-desktop-small">
    <div class="col-sm mt-3 mt-md-0" style="text-align: center;">
         {% include figure.liquid path="assets/img/publication_preview/neural_graph.png" class="img-fluid d-block mx-auto rounded z-depth-1" zoomable=true %}
     </div> 
