fix mobile view

--- a/_posts/2026-01-15-moe.md
+++ b/_posts/2026-01-15-moe.md
@@ -299,7 +299,7 @@ $$
 where $$ \mathbf{x}^{(i)} $$ is the subset of $$ \mathbf{x} $$ corresponding to the tokens that activated expert $ i $.
 Compared to activation frequencies ($A$), scores $S$ measure more accurately the contribution of each expert to the final output of the MoE layer.
 
-The following is my pseudocode of computing REAP scores based on the equation above.
+The following is my pseudocode of computing REAP scores based on the equation above<d-footnote>My implementation may differ from the official REAP code https://github.com/CerebrasResearch/reap. I implement a simple version aligned with the equation.</d-footnote>.
 ```python
 # Pseudocode for computing REAP scores
 N = 128  # number of experts
