--- a/_posts/2026-01-15-moe.md
+++ b/_posts/2026-01-15-moe.md
@@ -687,7 +687,7 @@ Besides the high engineering and computation barrier, some benchmarks such as AI
 So evaluation should be done on more diverse and larger benchmarks, further increasing the engineering and computational cost.
 
 **Weight Space Learning.**
-Finally, relying on calibration is generally undesirable, because the results may be sensitive to the choice of calibration data.
+Finally, relying on calibration data is generally undesirable, because the results may be sensitive to the data choice.
 However, only using the weights of experts have led to poor results in my experiments and in ablation studies in the literature.
 Future work may explore how to use [Weight Space Learning (WSL)](https://weight-space-learning.github.io/)
 and specifically methods based on neural graphs<d-cite key="kofinas2024graph,knyazev2024accelerating"></d-cite> to better perform merging without relying on calibration data.
