--- a/_posts/2026-01-15-moe.md
+++ b/_posts/2026-01-15-moe.md
@@ -41,7 +41,7 @@ toc:
       - name: Expert Network Architecture
       - name: Key Concepts of MoE
       - name: Strengths of MoE
-  - name: Background
+  - name: "Background: MoE Compression"
     subsections:
         - name: Pruning Experts
         - name: Merging Experts
@@ -146,13 +146,14 @@ $$
 $$
 
 where each $E_i$ has the same architecture as an FFN<d-footnote>FFN stands for "feed-forward network", which is usually implemented as a simple MLP or a Gated Linear Unit (GLU) in Transformers.</d-footnote> layer in Transformers. 
-The gating network is typically implemented as:
+The gating network is typically implemented as<d-footnote>The order of the Softmax and TopKMask operations can vary in implementations.</d-footnote>:
 
 $$
-g(\mathbf{x}) = \text{TopK} \big( \text{Softmax} ( \underbrace{\mathbf{x} \, \mathbf{W}_g^T}_{\in \mathbb{R}^{n \times N}} ) \big),
+g(\mathbf{x}) = \text{TopKMask} \big( \text{Softmax} ( \underbrace{\mathbf{x} \, \mathbf{W}_g^T}_{\in \mathbb{R}^{n \times N}} ), \, \text{TopK} \big),
 $$ 
 
-where $\mathbf{W}_g \in \mathbb{R}^{N \times d}$ are the gating weights, and TopK is an operation that retains only the top K values per row (i.e. per token) and sets the rest to zero.
+where $\mathbf{W}_g \in \mathbb{R}^{N \times d}$ are the gating weights, 
+and TopKMask is an operation that retains only the TopK values per row (i.e. per token) and sets the rest to zero.
 Softmax is applied along each row to produce a probability distribution over the $N$ experts.
 
 ### Expert Network Architecture
@@ -249,7 +250,7 @@ These findings explain increasing the number of experts to 384 in Kimi K2 compar
 Even though the total number of parameter is soared to 1T, the inference remains efficient (with only TopK=8 experts activated).
 **However, the memory demand to store all expert weights on GPUs becomes a bottleneck for deploying such large MoE LLMs.**
 
-## Background
+## Background: MoE Compression
 
 Let me briefly describe some key expert pruning and merging techniques below before presenting my approach and results.
 I follow an assumption standard in the MoE compression literature that there is a pretrained MoE model with $N$ experts per MoE layer and the goal is to reduce it to $k < N$ experts.
@@ -470,7 +471,7 @@ In contrast, REAM follows REAP and simply removes the weights of the non-centroi
 ## Experiments
 
 Experiments are run for two models: **Qwen3-30B-A3B-Instruct-2507** and **Qwen3-235B-A22B-Instruct-2507**.
-These are MoE LLMs with 30B and 235B parameters, respectively, both having $N$=128 experts and TopK=8<d-footnote>The key difference between the two models is the number of Transformer layers (48 vs 96).</d-footnote>.
+These are MoE LLMs with 30B and 235B parameters, respectively, both having $N$=128 experts and TopK=8<d-footnote>The key differences between the two models are the number of Transformer layers (48 vs 96) and hidden size (2048 vs 4096).</d-footnote>.
 They are versatile models fine-tuned for instruction-following tasks heavily used in practice.
 
 The experiments aim to reduce the number of experts from $N=128$ to $k=96$ (i.e., by 25%) while maintaining high performance across multiple benchmarks.
@@ -627,18 +628,18 @@ Qwen3-30B-A3B-Instruct-2507 merged with REAM is released on [huggingface](https:
 
 **MC tasks results for Qwen3-30B-A3B-Instruct-2507.**
 
-| Model    | Winogrande | ARC-C | ARC-E | BoolQ | HellaSwag | MMLU | OpenBookQA | RTE  | AVG  |
-|----------|------------|-------|-------|-------|-----------|------|------------|------|------|
-| Original | 73.2       | 60.7  | 85.1  | 88.7  | 61.2      | 80.1 | 32.4       | 76.5 | 69.7 |
-| REAM     | 71.8       | 51.9  | 79.1  | 88.5  | 57.6      | 70.1 | 30.0       | 77.6 | 65.8 |
+| Model    | N   | Winogrande | ARC-C | ARC-E | BoolQ | HellaSwag | MMLU | OBQA | RTE  | AVG  |
+|----------|-----|------------|-------|-------|-------|-----------|------|------|------|------|
+| Original | 128 | 73.2       | 60.7  | 85.1  | 88.7  | 61.2      | 80.1 | 32.4 | 76.5 | 69.7 |
+| REAM     | 96  | 71.8       | 51.9  | 79.1  | 88.5  | 57.6      | 70.1 | 30.0 | 77.6 | 65.8 |
 
 
 **GEN tasks results for Qwen3-30B-A3B-Instruct-2507.**
 
-| Model    | IFEval | AIME25 | GSM8K | GPQA-D | HumanEval | LiveCodeBench | AVG   |
-|----------|--------|--------|-------|--------|-----------|---------------|-------|
-| Original | 90.4   | 56.7   | 89.3  | 47.0   | 93.3      | 48.6          |  70.9 | 
-| REAM     | 89.2   | 66.7   | 88.1  | 38.9   | 86.6      | 36.9          |  67.7 |
+| Model    | N   | IFEval | AIME25 | GSM8K | GPQA-D | HumanEval | LiveCodeBench | AVG    |
+|----------|-----|--------|--------|-------|--------|-----------|---------------|--------|
+| Original | 128 | 90.4   | 56.7   | 89.3  | 47.0   | 93.3      | 48.6          | 70.9   | 
+| REAM     | 96  | 89.2   | 66.7   | 88.1  | 38.9   | 86.6      | 36.9          | 67.7   |
 
 
 ### Qwen3-235B-A22B
@@ -655,12 +656,12 @@ The results are shown in the Table below. As this is an ongoing research project
 
 **GEN tasks results for Qwen3-235B-A22B-Instruct-2507.**
 
-| Model    | N   | TopK | IFEval   | AIME25    | GSM8K    | HumanEval | AVG      |
-|----------|-----|------|----------|-----------|----------|-----------|----------|
-| Original | 128 | 8    | 93.3     | 66.7      | 89.4     | 95.1      | 86.1     |
-| HC-SMoE  | 96  | 8    | 89.6     | 63.3      | 87.5     | 86.0      | 81.6     |
-| REAP     | 96  | 8    | **91.6** | 66.7      | **88.3** | **95.2**  | **85.5** |
-| REAM     | 96  | 8    | 90.7     | **70.0**  | 88.2     | 92.7      | 85.4     |
+| Model    | N   | IFEval   | AIME25    | GSM8K    | HumanEval | AVG      |
+|----------|-----|----------|-----------|----------|-----------|----------|
+| Original | 128 | 93.3     | 66.7      | 89.4     | 95.1      | 86.1     |
+| HC-SMoE  | 96  | 89.6     | 63.3      | 87.5     | 86.0      | 81.6     |
+| REAP     | 96  | **91.6** | 66.7      | **88.3** | **95.2**  | **85.5** |
+| REAM     | 96  | 90.7     | **70.0**  | 88.2     | 92.7      | 85.4     |
 
 
 On Qwen3-235B-A22B-Instruct-2507, REAP slightly outperforms REAM on 3 out of 4 GEN tasks and on average.
