add qwen3-next, more results, models released

--- a/_posts/2026-01-15-moe.md
+++ b/_posts/2026-01-15-moe.md
@@ -55,6 +55,7 @@ toc:
       - name: Benchmarks
       - name: Qwen3-30B-A3B
       - name: Qwen3-235B-A22B
+      - name: Qwen3-Next-80B-A3B
   - name: Conclusion
   - name: Citation
   - name: Footnotes
@@ -92,7 +93,8 @@ gpt-oss,
 Grok and others.<d-footnote>These are families of LLMs with many variants within the family. Typically, the most performant architecture within each family is an MoE.</d-footnote>
 
 When you deploy a very large model, the first challenge you will face would likely be the **memory demand**.
-For example, one of the largest and performant Qwen3 MoE models (Qwen3-235B-A22B) requires around 235B params $\times$ 2 bytes/param = **470GB** of VRAM (e.g., 6$\times$GPUs each having 80GB of VRAM such as NVIDIA H100)
+For example, one of the largest and performant Qwen3 MoE models (Qwen3-235B-A22B) requires 
+around 235B params $\times$ 2 bytes/param = **470GB** of VRAM (e.g., 6$\times$GPUs each having 80GB of VRAM such as NVIDIA H100)
 to merely load all its parameters on GPUs in 16 bit precision (see the sidenote on the right).
 Traditional approaches to deal with this challenge include pruning and quantization (and of course getting more GPUs &#128176; &#128176; &#128176;). 
 
@@ -109,17 +111,19 @@ In practice, frameworks like vllm optimize memory usage with quantization, CPU o
 The core idea is that merging can be more effective than pruning as it aims to preserve functions by leveraging all experts instead of discarding some of them.
 
 But before going into details, let me first describe the MoE architecture and its benefits. 
-Then, I will present my results of merging experts in Qwen3-30B-A3B and Qwen3-235B-A22B<d-footnote>Their Instruct-2507 versions.</d-footnote>,
-reducing the number of experts from 128 to 96, thereby **reducing memory demands by around 25%**<d-footnote>Since most (>98% in Qwen3) of parameters belong to MoE layers, reducing the number of experts is roughly equivalent to reducing the number of parameters (and hence, memory) in the overall model.</d-footnote>, 
+Then, I will present my results of merging experts in Qwen3-30B-A3B, Qwen3-235B-A22B and Qwen3-Next-80B-A3B<d-footnote>Their Instruct versions.</d-footnote>,
+reducing the number of experts by 25%<d-footnote>From 128 to 96 for Qwen3-30B-A3B and Qwen3-235B-A22B, and from 512 to 384 for Qwen3-Next.</d-footnote>, 
+thereby **reducing memory demands by around 25%**<d-footnote>Since most (>98% in Qwen3) of parameters belong to MoE layers, reducing the number of experts is roughly equivalent to reducing the number of parameters (and hence, memory) in the overall model.</d-footnote>, 
 while maintaining high performance across multiple benchmarks.
 
 ## TL;DR
 
 - I propose REAM, a retraining-free expert merging method for MoE LLMs. 
 - REAM is a sequential merging algorithm using REAP-based saliency<d-cite key="lasby2025reap"></d-cite>.
-- It reduces experts by 25% (128 → 96) with strong results on Qwen3-30B and Qwen3-235B.
-- On Qwen3-30B, REAM beats REAP and HC-SMoE<d-cite key="chen2025retrainingfree"></d-cite> on average across MC + GEN tasks.
-- On Qwen3-235B, REAM also shows competitive performance.
+- It reduces experts by 25% with strong results on Qwen3 MoE LLMs.
+- REAM outperforms REAP and HC-SMoE<d-cite key="chen2025retrainingfree"></d-cite> 
+on multiple tasks.
+- Compressed Qwen3 models are released on [huggingface](https://huggingface.co/collections/SamsungSAILMontreal/qwen3-moe)🤗.
 
 ## Introducing MoE
 
@@ -246,7 +250,7 @@ They define sparsity as the total number of experts ($N$) divided by TopK showin
 </div>
 
 
-These findings explain increasing the number of experts to 384 in Kimi K2 compared to 256 in DeepSeek and 128 in Qwen3.
+These findings explain increasing the number of experts to 384 in Kimi K2 compared to 256 in DeepSeek and 128 in Qwen3 (more recent Qwen3-Next-80B-A3B also increased $N$ to 512).
 Even though the total number of parameter is soared to 1T, the inference remains efficient (with only TopK=8 experts activated).
 **However, the memory demand to store all expert weights on GPUs becomes a bottleneck for deploying such large MoE LLMs.**
 
@@ -446,13 +450,13 @@ For math data, the [AI-MO/NuminaMath-1.5](https://huggingface.co/datasets/AI-MO/
 For coding data, [bigcode/the-stack-smol](https://huggingface.co/datasets/bigcode/the-stack-smol) is used.
 A different number of samples (sequences) and max tokens are used per dataset to balance their proportions as shown below.
 
-**Calibration data used across all the experiments.**
+**Table 1. Calibration data used across all the experiments.**
 
-| Domain    | Dataset                                  | # sequences | max tokens | ≈total tokens | ≈proportion |
-|-----------|------------------------------------------|-------------|------------|---------------|-------------|
-| General   | allenai/c4/en                            | 512         | 128        | 60k           | 8%          |
-| Math      | AI-MO/NuminaMath-1.5 (cn_k12, olympiads) | 1024        | 512        | 524k          | 68%         |
-| Coding    | bigcode/the-stack-smol                   | 512         | 512        | 190k          | 24%         |
+| **Domain**  | **Dataset**                              | **Sequences** | **Max tokens** | **≈Total tokens** | **≈Proportion** |
+|-------------|------------------------------------------|---------------|----------------|-------------------|-----------------|
+| General     | allenai/c4/en                            | 512           | 128            | 60k               | 8%              |
+| Math        | AI-MO/NuminaMath-1.5 (cn_k12, olympiads) | 1024          | 512            | 524k              | 68%             |
+| Coding      | bigcode/the-stack-smol                   | 512           | 512            | 190k              | 24%             |
 
 Math and coding data are dominant as they are often shown important in adapting LLMs for reasoning and coding tasks.
 Also, math and coding benchmarks dominate the evaluation in practice. 
@@ -470,16 +474,25 @@ In contrast, REAM follows REAP and simply removes the weights of the non-centroi
 
 ## Experiments
 
-Experiments are run for two models: **Qwen3-30B-A3B-Instruct-2507** and **Qwen3-235B-A22B-Instruct-2507**.
-These are MoE LLMs with 30B and 235B parameters, respectively, both having $N$=128 experts and TopK=8<d-footnote>The key differences between the two models are the number of Transformer layers (48 vs 96) and hidden size (2048 vs 4096).</d-footnote>.
+Experiments are run for three models: **Qwen3-30B-A3B-Instruct-2507**, **Qwen3-235B-A22B-Instruct-2507** and **Qwen3-Next-80B-A3B-Instruct**.
+These are MoE LLMs with 30B, 235B and 80B parameters, respectively.
+Qwen3-30B-A3B and Qwen3-235B-A22B have $N$=128 experts and TopK=8<d-footnote>The key differences between the two models are the number of Transformer layers (48 vs 94) and hidden size (2048 vs 4096).</d-footnote>.
+Qwen3-Next-80B-A3B has $N$=512 experts and TopK=10.
 They are versatile models fine-tuned for instruction-following tasks heavily used in practice.
 
-The experiments aim to reduce the number of experts from $N=128$ to $k=96$ (i.e., by 25%) while maintaining high performance across multiple benchmarks.
-The proposed REAM method is evaluated compared to the leading expert pruning method (REAP)<d-cite key="lasby2025reap"></d-cite> and leading expert merging method (HC-SMoE)<d-cite key="chen2025retrainingfree"></d-cite>.
+The experiments aim to reduce the number of experts by 25% (i.e., from 128 to 96 or from 512 to 384), 
+while maintaining high performance across multiple benchmarks.
+The proposed REAM method is evaluated compared to the leading expert pruning method (REAP)<d-cite key="lasby2025reap"></d-cite> 
+and leading expert merging method (HC-SMoE)<d-cite key="chen2025retrainingfree"></d-cite>.
+
+🤗Qwen3 models compressed with HC-SMoE/REAP/REAM are released at 
+[huggingface-models](https://huggingface.co/collections/SamsungSAILMontreal/qwen3-moe).
+Details about the evaluation are provided at [huggingface-details](https://huggingface.co/SamsungSAILMontreal/Qwen3-30B-A3B-Instruct-2507-REAM).
 
 ### Benchmarks
 
-Compressed models are evaluated on two sets of benchmarks: multi-choice question answering (**MC**) and long context reasoning tasks (**GEN**) tasks.
+Compressed models are evaluated on two sets of benchmarks: 
+multi-choice question answering (**MC**) and long context reasoning tasks (**GEN**) tasks.
 The MC tasks are often evaluated by loglikelihood of the correct choice among multiple choices, so the model does not 
 generate free-form text answers.
 In contrast, in long context reasoning tasks (GEN), the model need to **generate** free-form answers, 
@@ -488,19 +501,21 @@ which is often more challenging and useful in practice.
 The MC set includes 8 tasks used in the HC-SMoE paper:
 Winogrande, ARC-C, ARC-E, BoolQ, HellaSwag, MMLU, OpenBookQA and RTE.
 
-The GEN set includes:
-  - IFEval: general instruction-following evaluation;
-  - AIME25: Math reasoning (competitive, high school level, only 30 questions);
-  - GSM8K: Math reasoning (grade school level);
-  - GPQA-Diamond: scientific reasoning tasks in biology, physics and chemistry (PhD level);
-  - HumanEval (instruction-based version): Python code generation tasks;
-  - LiveCodeBench (release=v6): more challenging code generation tasks.
+**Table 2. GEN benchmarks used in the experiments.**
 
-More details about the evaluation pipeline is provided at [huggingface](https://huggingface.co/SamsungSAILMontreal/Qwen3-30B-A3B-Instruct-2507-REAM).
+| **Benchmark**        | **Description**                                                         | **#Tasks** |
+|----------------------|-------------------------------------------------------------------------|------------|
+| IFEval               | General instruction-following                                           | 541        |
+| AIME25               | Math reasoning, competitive high school level                           | 30         |
+| GSM8K                | Math reasoning, grade school level                                      | 1319       |
+| GPQA-Diamond         | Scientific reasoning tasks in biology, physics and chemistry, PhD level | 792        |
+| HumanEval (instruct) | Python code generation tasks                                            | 164        |
+| LiveCodeBench v6     | More challenging code generation tasks                                  | 1055       |
 
 ### Qwen3-30B-A3B
 
-**Qwen3-30B-A3B-Instruct-2507** was used to tune the REAM hyperparameters (like calibration data mix, number of experts per group $C$, etc.).
+**Qwen3-30B-A3B-Instruct-2507** was used to tune the REAM hyperparameters 
+(like calibration data mix, number of experts per group $C$, etc.).
 Also, several ablations of REAM are performed using this model to highlight the importance of REAM components.
 The results are shown in the Figure below with the average scores across MC ($x$ axis) and GEN tasks ($y$ axis).
 
@@ -527,7 +542,7 @@ The results are shown in the Figure below with the average scores across MC ($x$
       "name": "HC-SMoE",
       "type": "scatter",
       "mode": "markers",
-      "x": [64.8],
+      "x": [64.9],
       "y": [66.3],
       "marker": { "size": 12, "symbol": "diamond" }
     },
@@ -535,8 +550,8 @@ The results are shown in the Figure below with the average scores across MC ($x$
       "name": "REAP",
       "type": "scatter",
       "mode": "markers",
-      "x": [65.2],
-      "y": [64.1],
+      "x": [65.0],
+      "y": [64.2],
       "marker": { "size": 12, "symbol": "cross" }
     },
     {
@@ -595,7 +610,7 @@ The results are shown in the Figure below with the average scores across MC ($x$
       "range": [45, 77]
     },
     "yaxis": {
-      "title": { "text": "Gen tasks score (%)" },
+      "title": { "text": "GEN tasks score (%)" },
       "range": [34, 77]
     },
     "legend": {
@@ -624,9 +639,8 @@ Interestingly, the results reveal an inherent tradeoff between MC and GEN tasks 
 Achieving Pareto optimal results seems challenging, however REAM shows promising results in this direction.
 
 Detailed results per task are shown below. 
-Qwen3-30B-A3B-Instruct-2507 merged with REAM is released on [huggingface](https://huggingface.co/SamsungSAILMontreal/Qwen3-30B-A3B-Instruct-2507-REAM).
 
-**MC tasks results for Qwen3-30B-A3B-Instruct-2507.**
+**Table 3. MC results for Qwen3-30B-A3B-Instruct-2507.**
 
 | Model    | N   | Winogrande | ARC-C | ARC-E | BoolQ | HellaSwag | MMLU | OBQA | RTE  | AVG  |
 |----------|-----|------------|-------|-------|-------|-----------|------|------|------|------|
@@ -634,12 +648,12 @@ Qwen3-30B-A3B-Instruct-2507 merged with REAM is released on [huggingface](https:
 | REAM     | 96  | 71.8       | 51.9  | 79.1  | 88.5  | 57.6      | 70.1 | 30.0 | 77.6 | 65.8 |
 
 
-**GEN tasks results for Qwen3-30B-A3B-Instruct-2507.**
+**Table 4. GEN results for Qwen3-30B-A3B-Instruct-2507.**
 
-| Model    | N   | IFEval | AIME25 | GSM8K | GPQA-D | HumanEval | LiveCodeBench | AVG    |
-|----------|-----|--------|--------|-------|--------|-----------|---------------|--------|
-| Original | 128 | 90.4   | 56.7   | 89.3  | 47.0   | 93.3      | 48.6          | 70.9   | 
-| REAM     | 96  | 89.2   | 66.7   | 88.1  | 38.9   | 86.6      | 36.9          | 67.7   |
+| Model    | N    | IFEval | AIME25 | GSM8K  | GPQA-D | HumanEval | LiveCodeBench | AVG   |
+|----------|------|--------|--------|--------|--------|-----------|---------------|-------|
+| Original | 128  | 90.4   | 56.7   | 89.3   | 47.0   | 93.3      | 48.6          | 70.9  |
+| REAM     | 96   | 89.2   | 66.7   | 88.1   | 38.9   | 86.6      | 36.9          | 67.7  |
 
 
 ### Qwen3-235B-A22B
@@ -648,27 +662,50 @@ Results on **Qwen3-235B-A22B-Instruct-2507** are obtained by running REAM and ba
 So no tuning specific to this model is performed. 
 
 Evaluation on a model of this size is very challenging and computationally expensive. 
-Specifically, 8xH100 GPUs were required to fit the model in memory and perform evaluation.
+Specifically, 8xH100 GPUs were required to fit the model in memory and perform evaluation<d-footnote>In comparison, for Qwen3-30B, 1-4 GPUs were sufficient depending on the task.</d-footnote>.
 Each task took from a few minutes to 1-2 hours to evaluate. 
 So evaluation is costly, especially in academic settings.
+The results are shown in the Table below.
 
-The results are shown in the Table below. As this is an ongoing research project, only 4 tasks are evaluated for now.
+**Table 5. GEN results for Qwen3-235B-A22B-Instruct-2507.**
 
-**GEN tasks results for Qwen3-235B-A22B-Instruct-2507.**
-
-| Model    | N   | IFEval   | AIME25    | GSM8K    | HumanEval | AVG      |
-|----------|-----|----------|-----------|----------|-----------|----------|
-| Original | 128 | 93.3     | 66.7      | 89.4     | 95.1      | 86.1     |
-| HC-SMoE  | 96  | 89.6     | 63.3      | 87.5     | 86.0      | 81.6     |
-| REAP     | 96  | **91.6** | 66.7      | **88.3** | **95.2**  | **85.5** |
-| REAM     | 96  | 90.7     | **70.0**  | 88.2     | 92.7      | 85.4     |
+| Model    | N   | IFEval   | AIME25 | GSM8K    | GPQA-D   | HumanEval  | LiveCodeBench | AVG      |
+|----------|-----|----------|--------|----------|----------|------------|---------------|----------|
+| Original | 128 | 93.3     | 66.7   | 89.4     | 48.5     | 95.1       | 46.4          | 73.2     | 
+| HC-SMoE  | 96  | 89.6     | 63.3   | 87.5     | 39.9     | 86.0       | 40.0          | 67.7     |
+| REAP     | 96  | **92.0** | 63.3   | **88.8** | **46.0** | **94.5**   | **53.1**      | **72.9** |
+| REAM     | 96  | 90.4     | 63.3   | 88.2     | 44.4     | **94.5**   | 49.5          | 71.7     | 
 
 
-On Qwen3-235B-A22B-Instruct-2507, REAP slightly outperforms REAM on 3 out of 4 GEN tasks and on average.
+On Qwen3-235B-A22B-Instruct-2507, REAP slightly outperforms REAM on 4 out of 6 GEN tasks and on average.
 However, both achieve the results surprisingly close to the original model (even outperforming the original model on some tasks!). 
 HC-SMoE lags behind both methods significantly, which is different from the results on Qwen3-30B-A3B-Instruct-2507.
 It is possible that hyperparameters of REAM (as well as the baselines) are suboptimal for this model, 
 so further tuning may improve the results.
+
+### Qwen3-Next-80B-A3B
+
+**Qwen3-Next-80B-A3B-Instruct-2507** is a newer MoE model with a similar architecture as Qwen3-30B-A3B, but with 
+512 experts and TopK=10 instead of 128 and TopK=8, respectively. 
+Even though the total number of experts is increased 4x, the number of activated parameters is mainly affected by TopK.
+And although TopK is also increased in this model, to keep the number of activated parameters around 3B,
+the bottleneck dimension in each expert is reduced from 768 to 512.
+The results of compressing this model from 512 to 384 experts are shown below.
+Other than the number of experts and TopK, the same hyperparameters and calibration data as for 
+Qwen3-30B-A3B-Instruct-2507 are used in all methods.
+
+**Table 6. GEN results for Qwen3-Next-80B-A3B-Instruct-2507.**
+
+| Model    | N   | IFEval   | AIME25   | GSM8K    | GPQA-D   | HumanEval | LiveCodeBench | AVG      |
+|----------|-----|----------|----------|----------|----------|-----------|---------------|----------|
+| Original | 512 | 93.4     | 80.0     | 78.6     | 47.0     | 95.1      | 43.2          | 72.9     |
+| REAP     | 384 | 91.0     | 66.7     | **78.8** | **37.9** | 91.5      | **45.0**      | 68.5     |
+| REAM     | 384 | **91.5** | **73.3** | 78.4     | 36.9     | **92.7**  | 42.9          | **69.3** |
+
+On Qwen3-Next-80B-A3B-Instruct-2507, REAM outperforms REAP on 3 out of 6 GEN tasks and on average.
+HC-SMoE was not evaluated on this model, since it underperformed in previous experiments.
+Notably, the original Qwen3-Next model has almost the same GEN performance as its previous much larger (Qwen3-235B-A22B) variant (see Table 5 above),
+while having only 3B activated parameters instead of 22B. This further confirms the effectiveness of increasing MoE sparsity.
 
 ## Conclusion
 
@@ -676,7 +713,7 @@ so further tuning may improve the results.
 REAM shows promising results by reducing the memory requirement by around 25% while maintaining high performance across multiple benchmarks.
 There is still a room for improvement, especially in merging methods to better combine the weights of multiple experts.
 So it is possible that pruning methods (REAP) remain strong because the merging methods are still quite suboptimal.
-Improving merging methods may allow for further reducing the number of experts (e.g., to 64), while maintaining high performance.
+Improving merging methods may allow for further reducing the number of experts (e.g., by 50%), while maintaining high performance.
 
 **MC vs GEN Tradeoff.**
 The tradeoff between MC and GEN tasks performance is surprising, since MC tasks are assumed to be easier than GEN tasks.
@@ -700,6 +737,8 @@ and specifically methods based on neural graphs<d-cite key="kofinas2024graph,kny
   title={REAM: Compressing Mixture-of-Experts LLMs},
   author={Boris Knyazev},
   year={2026},
-  howpublished={\url{https://bknyaz.github.io/2026/01/15/moe/}}
+  url={https://bknyaz.github.io/2026/01/15/moe/}
 }
 ```
+
+**Use of LLMs**: LLMs were used to slightly improve the writing and formatting of this blog post.
