--- a/assets/bibliography/2026-01-15-moe.bib
+++ b/assets/bibliography/2026-01-15-moe.bib
@@ -124,6 +124,22 @@ url={https://arxiv.org/abs/2410.08589},
   url={https://arxiv.org/abs/2209.04836}
 }
 
+@inproceedings{stoica2024zipit,
+  title={ZipIt! Merging Models from Different Tasks without Training},
+  author={Stoica, George and Bolya, Daniel and Bjorner, Jakob Brandt and Ramesh, Pratik and Hearn, Taylor and Hoffman, Judy},
+  booktitle={ICLR},
+  year={2024},
+  url={https://arxiv.org/abs/2305.03053}
+}
+
+@inproceedings{lim2024graph,
+  title={Graph Metanetworks for Processing Diverse Neural Architectures},
+  author={Lim, Derek and Maron, Haggai and Law, Marc T and Lorraine, Jonathan and Lucas, James},
+  booktitle={ICLR},
+  year={2024},
+  url={2312.04501}
+}
+
 @inproceedings{kofinas2024graph,
   title={Graph Neural Networks for Learning Equivariant Representations of Neural Networks},
   author={Kofinas, Miltiadis and Knyazev, Boris and Zhang, Yan and Chen, Yunlu and Burghouts,
